<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckMailPage"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical">
    <ImageView
        android:layout_width="170sp"
        android:layout_height="170sp"
        android:src="@drawable/img"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_your_mail_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginTop="15sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkmail_notice"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="40sp"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_email_app"
        android:layout_marginTop="25sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_i_ll_confirm_letter"
        android:layout_marginTop="25sp"
        android:textColor="@color/black"
        android:textSize="15sp"/>
</LinearLayout>