<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginVertical="15sp"
        android:layout_marginHorizontal="10sp">
        <ImageButton
            android:id="@+id/backbutton"
            android:layout_width="30dp"
            android:layout_height="21dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:backgroundTint="@color/white"
            android:src="@drawable/back"
            android:layout_alignParentBottom="true"/>
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/backbutton"
            android:text="@string/back_text"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="3sp"
            android:textColor="@color/black"
            android:layout_alignParentBottom="true"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/help"
            android:backgroundTint="@color/white"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_marginHorizontal="20sp"
        android:text="@string/reset_password"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="20sp"
        android:text="@string/reset_password_text"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35sp"
        android:layout_marginHorizontal="20sp"
        android:text="@string/email_address_text"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="15sp"
        android:background="@drawable/edittext_border"
        android:hint="@string/email"
        android:padding="10sp"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_instructions"
        android:layout_marginHorizontal="80sp"
        android:layout_marginTop="20sp"
        android:padding="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple_700"/>
</LinearLayout>