<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".CreateNewPass">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="center_vertical"
        android:padding="10sp">
        <ImageButton
            android:id="@+id/backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_text"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="20sp"
        android:text="@string/create_new_password"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="20sp"
        android:text="@string/new_pass_notice"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35sp"
        android:layout_marginHorizontal="20sp"
        android:text="Password"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:ignore="HardcodedText" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="5sp"
        android:background="@drawable/edittext_border"
        android:padding="10sp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4sp"
        android:layout_marginHorizontal="22sp"
        android:text="Must be at least 8 Characters."
        android:textSize="13sp"
        android:textColor="@color/black"
        tools:ignore="HardcodedText" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="20sp"
        android:text="Confirm Password"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:ignore="HardcodedText" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="5sp"
        android:background="@drawable/edittext_border"
        android:padding="10sp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4sp"
        android:layout_marginHorizontal="22sp"
        android:text="Both Password Must Match."
        android:textSize="13sp"
        android:textColor="@color/black"
        tools:ignore="HardcodedText" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:text="Reset Password"
        android:paddingHorizontal="55sp"
        android:textColor="@color/white"/>
</LinearLayout>